--- a/lab1.html
+++ b/lab1.html
@@ -5,67 +5,89 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Лабораторна 1 — Створення бази для реєстрації</title>
   <link rel="stylesheet" href="styles.css">
-  <style>
-    form {
-      background: var(--card);
-      padding: 16px;
-      border-radius: 8px;
-      max-width: 400px;
-      margin: 0 auto;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-    }
-    label { display:block; margin-top:12px; }
-    input, select {
-      width:100%;
-      padding:8px;
-      margin-top:4px;
-      border:1px solid #ccc;
-      border-radius:4px;
-    }
-    input[type="submit"] {
-      background: var(--accent);
-      color:#fff;
-      border:none;
-      cursor:pointer;
-      margin-top:16px;
-    }
-    input[type="submit"]:hover {opacity:0.9;}
-  </style>
+<style>
+  body {
+    background: #ffe6f0;
+    font-family: Arial, sans-serif;
+    color: #333;
+  }
+  form {
+    background: #fff0f5;
+    padding: 20px;
+    max-width: 400px;
+    margin: 40px auto;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(255, 105, 180, 0.3);
+  }
+  label {
+    display: block;
+    margin-top: 18px;
+  }
+  input, select {
+    width: 95%;
+    padding: 5px;
+    margin-top: 5px;
+    border: 1px solid #ffb6c1;
+    border-radius: 7px;
+  }
+  input[type="submit"] {
+    background: #ff69b4;
+    color: white;
+    border: none;
+    padding: 10px;
+    margin-top: 20px;
+    border-radius: 6px;
+    cursor: pointer;
+  }
+  input[type="submit"]:hover {
+    background: #ff1493;
+  }
+  h2 {
+  text-align: center;
+  color: #ff69b4;
+  margin-bottom: 20px;
+}
+</style>
 </head>
 <body>
   <header class="site-header">
     <div class="container">
-      <h1>Лабораторна робота №1</h1>
       <nav class="main-nav">
-        <a href="index.html#labs"> На головну</a>
+        <a href="index.html#labs"> Назад </a>
       </nav>
     </div>
   </header>
-
   <main class="container">
     <section class="card">
-      <h2>Форма реєстрації</h2>
-
+      <h2>Реєстрація</h2>
       <form action="https://webhook.site/aac66f90-9db0-45a6-9e7c-bc27aee01391" method="post">
         <label>Ім’я:
           <input type="text" name="first_name" required>
         </label>
-
         <label>Прізвище:
           <input type="text" name="last_name" required>
         </label>
-
         <label>Email:
           <input type="email" name="email" required>
         </label>
-
-        <label>Пароль:
-          <input type="password" name="password" required>
+        <label>Стать:
+          <select name="gender">
+            <option value="">Оберіть</option>
+            <option value="male">Чоловіча</option>
+            <option value="female">Жіноча</option>
+          </select>
         </label>
 
-        <label>Дата народження:
-          <input type="date" name="birth_date">
-        </label>
+        <input type="submit" value="Зареєструватися">
+      </form>
+    </section>
+  </main>
+  <footer class="site-footer">
+    <div class="container footer-grid">
+    </div>
+</body>
+  </footer>
+</html>
 
         <label>Стать:
           <select name="gender">
