--- a/index.html
+++ b/index.html
@@ -9,26 +9,30 @@
 
     <nav>
         <ul>
-            <li><a href="home">Головна</a></li>
+            <li><a href="index.html">Головна</a></li>
             <li><a href="#me">Про мене</a></li>
             <li><a href="#practicals">Практичні роботи</a></li>
             <li><a href="#labs">Лабораторні роботи</a></li>
         </ul>
     </nav>
 
-    <section id="me">
-        <h2>Трохи інформації про мене</h2>
-        <img src="C:\Users\polin\Downloads\Telegram Desktop\photo_2025-09-17_10-16-07.jpg" alt="Фото студентки" width="150">
-        <p>Ім'я: Бойко Поліна Максимівна</p>
-        <p>Номер: +38 096 652 2290</p>
-        <p>Email: bojko.polina03@gmail.com</p>
-        <p>Я студентка групи ТЦР-22</p>
-    </section>
+  <section id="me">
+    <h2>Трохи інформації про мене</h2>
+    <img src="myphoto.jpg" alt="Фото студентки" width="200">
+    <p><strong>Ім'я:</strong> Бойко Поліна Максимівна</p>
+    <p><strong>Вік:</strong> 18 років</p>
+    <p><strong>Освіта:</strong> Студентка групи ТЦР-22, Державного університету інформаційно-комунікаційних технологій</p>
+    <p>Я — відповідальна, ініціативна та творча людина. Навчаюся у сфері телекомунікацій та інформаційних технологій і прагну постійного розвитку. </p>
+    <p>У вільний час я працюю з людьми в сфері обслуговування. Це допомагає мені розвивати навички комунікації, організованість і витривалість. Я навчилася краще розуміти потреби інших, ефективно вирішувати проблеми та зберігати позитив навіть у напружених ситуаціях.</p>
+    <p>Також люблю прогулянки на природі, малювання й саморозвиток. Вірю, що поєднання технічних навичок і соціального досвіду робить мене більш універсальною і підготовленою до сучасного ринку праці.</p>
+</section>
+
+
 
     <section id="practicals">
     <h2>Практичні роботи</h2>
     <ul>
-        <li><a href="#">Практична робота №1</a> — Створення персонального сайту</li>
+        <li><a href="practical1.html">Практична робота №1</a> — Розклад па на неділю</li>
         <li><a href="#">Практична робота №2</a> — Оформлення сторінки за допомогою CSS</li>
         <li><a href="#">Практична робота №3</a> — Робота з гіперпосиланнями та зображеннями</li>
     </ul>
@@ -37,8 +41,19 @@
 <section id="labs">
     <h2>Лабораторні роботи</h2>
     <ul>
-        <li><a href="#">Лабораторна №1</a> — Створення HTML-документу</li>
-        <li><a href="#">Лабораторна №2</a> — Використання CSS для стилізації елементів</li>
-        <li><a href="#">Лабораторна №3</a> — Списки, таблиці та форми в HTML</li>
+        <li><a href="lab1.html">Лабораторна №1</a> — Створення бази для реєстрації</li>
+        <li><a href="lab2.html">Лабораторна №2</a> — Використання CSS для стилізації елементів</li>
+        <li><a href="lab3.html">Лабораторна №3</a> — Створення сторінки</li>
     </ul>
 </section>
+<body>
+    <footer>
+    <hr>
+    <p>Контактний номер: +38 096 652 2290</p>
+    <p>Telegram: <a href="https://t.me/polliizz" target="_blank">@polliizz</a></p>
+    <p>Роки навчання в ДУІКТ: з 2024 по 2028 рік</p>
+    <p>GitHub: <a href="https://github.com/polliizz" target="_blank">github.com/polliizz</a></p>
+</footer>
+</body>
+
+
