--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <li><a href="lab1.html">Лабораторна №1</a> — Створення бази для реєстрації</li>
         <li><a href="lab2.html">Лабораторна №2</a> — Використання CSS для стилізації елементів</li>
         <li><a href="lab3.html">Лабораторна №3</a> — Створення сторінки</li>
+         <li><a href="lab4.html">Лабораторна №4</a> — Створення планера</li>
     </ul>
 </section>
 <body>
