--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <li><a href="practical1.html">Практична робота №1</a> — Розклад па на неділю</li>
         <li><a href="#">Практична робота №2</a> — Оформлення сторінки за допомогою CSS</li>
         <li><a href="#">Практична робота №3</a> — Робота з гіперпосиланнями та зображеннями</li>
+         <li><a href="practical4.html">Практична робота №4</a> — Створення клавіатури</li>
     </ul>
 </section>
 
@@ -44,10 +45,10 @@
         <li><a href="lab1.html">Лабораторна №1</a> — Створення бази для реєстрації</li>
         <li><a href="lab2.html">Лабораторна №2</a> — Використання CSS для стилізації елементів</li>
         <li><a href="lab3.html">Лабораторна №3</a> — Створення сторінки</li>
-         <li><a href="lab4.html">Лабораторна №4</a> — Створення планера</li>
+        <li><a href="lab4.html">Лабораторна №4</a> — Створення планера</li>
     </ul>
 </section>
-<body>
+<body>  
     <footer>
     <hr>
     <p>Контактний номер: +38 096 652 2290</p>
