Add link for Лабораторна №5 in index.html

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <li><a href="lab2.html">Лабораторна №2</a> — Використання CSS для стилізації елементів</li>
         <li><a href="lab3.html">Лабораторна №3</a> — Створення сторінки</li>
         <li><a href="lab4.html">Лабораторна №4</a> — Створення планера</li>
+         <li><a href="lab5.html">Лабораторна №5</li>
     </ul>
 </section>
 <body>  
