--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         <li><a href="lab2.html">Лабораторна №2</a> — Використання CSS для стилізації елементів</li>
         <li><a href="lab3.html">Лабораторна №3</a> — Створення сторінки</li>
         <li><a href="lab4.html">Лабораторна №4</a> — Створення планера</li>
-         <li><a href="lab5.html">Лабораторна №5</li>
+        <li><a href="lab5.html">Лабораторна №5</li>
+        <li><a href="lab7.html">Лабораторна №7</a> — Новорічна листівка</li>
     </ul>
 </section>
 <body>  
