Refactor HTML structure and fix typos

--- a/lab5.html
+++ b/lab5.html
@@ -8,30 +8,37 @@
 </head>
 <body>
 
-    <header class="navbar">
+<header class="navbar">
+    <div class="container">
         <div class="logo">Моє портфоліо</div>
-    </header>
+    </div>
+</header>
 
-    <section class="hero">
+<section class="hero">
+    <div class="container hero-inner">
+
         <div class="hero-content">
             <h1>Привіт, я Поліна 💗</h1>
             <p>Це моя нова сторінка для Лабораторної роботи №5</p>
         </div>
 
         <div class="hero-img">
-         
             <img src="me.jpg" alt="My Photo">
         </div>
-    </section>
 
-    <section class="about">
+    </div>
+</section>
+
+<section class="about">
+    <div class="container">
         <h2>Про мене</h2>
-        <p>Я багато прцюю, навчаюсь та дуже люблю подорожувати</p>
-    </section>
+        <p>Я багато працюю, навчаюсь та дуже люблю подорожувати</p>
+    </div>
+</section>
 
-    <footer>
-        © 2025 Поліна • Лабораторна 5
-    </footer>
+<footer>
+    © 2025 Поліна • Лабораторна 5
+</footer>
 
 </body>
 </html>
